# vsdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
backend/: .env.example  .pre-commit-config.yaml  pyproject.toml
backend/app/: config.py  main.py  setup.py
backend/app/agents/: agent_coordinator.py  language_agent.py  voice_agent.py
backend/app/audio/: audio_utils.py  vad.py
backend/app/browser/: browser_manipulator.py
backend/app/chat/: BroAIAgent.py  CustomBroAgent.py  agent.py  playwright_client.py  playwright_tools.py  router.py  stagehand_client.py  stagehand_tools.py
backend/app/conversation/: conversation_processor.py  models.py
backend/app/example/: models.py  router.py  schemas.py
backend/app/plugin/: router.py
backend/app/sockets/: twilio_client.py
backend/app/twilio/: router.py  schemas.py
backend/app/voice_agent/: agent_coordinator.py  conversation_container.py  conversation_interpreter.py  conversation_manager.py  conversation_orchestrator.py  domain.py  language_agent.py  outbound_events.py  router.py  schemas.py  text_voice_interface.py  voice_agent.py  voice_agent_coordinator.py
backend/app/voice_agent/conversation/: base.py  conversation_manager.py  conversation_processor.py  domain.py  models.py
backend/app/voice_agent/stt/: GroqSTTProcessor.py  domain.py
backend/app/voice_agent/tts/: ElevenTTSProcessor.py  domain.py
backend/app/voice_agent/ttt/: BroAIAgent.py  OpenAIAgent.py  base.py  domain.py
backend/app/voice_bro/: router.py
backend/app/vsdk/: router.py
backend/static/css/: common.css
backend/static/js/: audio-processor.js  plugin.js  twilio.js  voice_bro.js  vsdk.js
backend/templates/: chat.html  main.html  plugin.html  twilio.html  voice_bro.html  vsdk.html
backend/tests/: test_conversation_flow.py
backend/tests/resources/: readme.md
bro-use/: package-lock.json  (+2 more)
vsdk/: .gitignore  README.md  pyproject.toml
vsdk/tests/: test_conversation_orchestration.py
vsdk/tests/conversation/: test_base.py
vsdk/vsdk/: config.py  conversation_orchestrator.py  domain.py  voice_agent.py
vsdk/vsdk/conversation/: base.py  domain.py
vsdk/vsdk/stt/: GroqSTTProcessor.py  base.py
vsdk/vsdk/tts/: ElevenTTSProcessor.py  base.py
vsdk/vsdk/ttt/: OpenAIAgent.py  base.py
vsdk/vsdk/vad/: vad.py
(+30 files in other folders)
