
[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",

    "fastapi[standard]>=0.115.11",
    "uvicorn==0.34.0",
    "beanie==1.29.0",
    "python-multipart==0.0.20",


    "langchain==0.3.17",
    "langgraph==0.3.8",
    "langchain-openai==0.3.3",


    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",

    "ruff==0.8.3"
]


[ruff]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
